Bug 102907 - Blue selection indicator for characters and words does not show when text is rotated 90°
Summary: Blue selection indicator for characters and words does not show when text is ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.5.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.0.1 target:6.0.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-10-01 07:16 UTC by bug.reporter.21
Modified: 2018-07-01 23:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture (15.17 KB, image/png)
2016-10-02 07:33 UTC, bug.reporter.21
Details
bibisect in till51 repo, tail of terminal output (2.47 KB, text/plain)
2018-04-16 15:09 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bug.reporter.21 2016-10-01 07:16:28 UTC
1) Open a new writer document
2) modify the default style to write vertically (Position tab of the style edition pane, Rotation/Scaling check the 90° radio button)
3) whatever the selection is, there is only a blinking carret

you can double click on a word to select it but there is no usual blue background.
Comment 1 V Stuart Foote 2016-10-02 01:31:55 UTC
Can not confirm on Windows 10 Pro 64-bit (ver 1607) en-US with

Version: 5.2.2.2 (x64)
Build ID: 8f96e87c890bf8fa77463cd4b640a2312823f3ad
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
Locale: en-US (en_US); Calc: group

Default black font on white canvas shows well formed 90° rotated text, enabling non-printing characters shows paragraph marks, spaces and tabs as expected in the rotated text.
Comment 2 bug.reporter.21 2016-10-02 07:33:41 UTC
Created attachment 127775 [details]
Screen capture

This is a matter of selection.
In the screen capture, the whole word "ipsum" is selected but we have no mean to know except that the blinking carret jumped to the end of the word.

FYI, if I select all (Edit->Select All), I can see the background color indicating that everything has been selected.

OS X 10.10.5
Comment 3 V Stuart Foote 2016-10-02 14:22:45 UTC
OK, now understand the issue is the missing indicator that a character or word from rotated text has been selected. 

The selection indicator--blue background highlight-- does not show when paragraph style's text is rotated 90° from the Position tab "Rotation / Scaling" area of the dialog. 

Testing on 5.2.2.2 on Windows (as in comment 1).

Selection is indicated in the status bar--Word & Character count--widget.

So, <Shift>+<Right> will select single characters or expand into word selections, or a double mouse-click will select a single word. There is no selection highlight indicator on the document canvas.

Interestingly, selecting the whole sentence (with a triple mouse-click) does show the expected blue selection highlighting of the rotated text. And the status bar indicates a correct count of words as selected.

So, this bug affects the rendering of a selection indicator for single character, and single word objects, but not sentence objects.
Comment 4 QA Administrators 2017-10-23 14:07:26 UTC Comment hidden (obsolete)
Comment 5 Gerhard Weydt 2018-04-08 19:22:53 UTC
I can reproduce the bug in 6.0.2.1, 5.2.3.3 and 5.1.0.2.
I can add some more information:
It still works in 5.0.6.3, and it already does not work in 5.1.0.2.

I reproduced the bug with simply setting the character format to a rotation of 90° as well as with the same attribute for character and paragraph styles.

The previous comments do not say it clearly, but the selection you would expect using Shift+Right/Left is in effect; only the blue selection indicator is missing.
Comment 6 Gerhard Weydt 2018-04-08 19:28:45 UTC
forgot to add the precise information from help:
Version: 6.0.2.1
Build-ID: f7f06a8f319e4b62f9bc5095aa112a65d2f3ac89
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 7 Terrence Enger 2018-04-16 15:09:50 UTC
Created attachment 141395 [details]
bibisect in till51 repo, tail of terminal output

Working of debian-buster in the till51 bibisect repo, I see that the
bug entered LO somewhere in the 100 or so source commits:

           commit    date        s-h
           --------  ----------  --------
    good   8d4474d6  2015-06-04  8ae25bbc
    bad    d2fd284b  2015-06-05  856233d2

I am adding keyword bibisected.
Comment 8 Buovjaga 2018-06-05 17:48:11 UTC
I used the Win 5.1 repo and got this: https://cgit.freedesktop.org/libreoffice/core/commit/?id=79800559268c636740fec69018b1f99f047c3f93

commit 79800559268c636740fec69018b1f99f047c3f93 (patch)
tree 4de6b7388032cfe632e69710ecc8ffe44b241d6f
parent 81610561edfb8c899a062cc09fc1a80e8098577f (diff)
convert MT_ constants to scoped enum
Change-Id: I21e253ed9dccdab84be4838b5beee9385467ed37
Reviewed-on: https://gerrit.libreoffice.org/16068

Definitely seems to be barking up the right tree.

Adding Noel to CC
Comment 9 Commit Notification 2018-06-11 08:04:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16b1d80070142e2ffecaba64b62dbe836daafb4f

tdf#102907 selection indicator missing on vertical text

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2018-06-11 09:33:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ba6d941c89c13130fd8d5ab1d87123f53b5b18f2&h=libreoffice-6-1

tdf#102907 selection indicator missing on vertical text

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2018-06-11 11:30:14 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=97cac82274698cc48b20d010983803e385264a85&h=libreoffice-6-0

tdf#102907 selection indicator missing on vertical text

It will be available in 6.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Gerhard Weydt 2018-07-01 23:10:02 UTC
could verify it with:

Version: 6.2.0.0.alpha0+ (x64)
Build-ID: d8733e2c59f120acf9feddff04964becc3358621
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2018-06-26_11:09:03
Gebietsschema: de-DE (de_DE); Calc: CL

Version: 6.1.0.0.beta2 (x64)
Build-ID: 0f4d2060bc90b4008fbc8e6d9a49ec7eeea60b78
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; 
Gebietsschema: de-DE (de_DE); Calc: CL

(but only with OpenGL deactivated, see Bug 118495 - Vertical text is illegible in almost all cases)

Setting Verified