tdf#102907 selection indicator missing on vertical text

regression from

    commit 79800559268c636740fec69018b1f99f047c3f93
    convert MT_ constants to scoped enum

The original code used bit-wise operations and some clever constant
values, which I did not convert correctly

Change-Id: I2fcd9e2584638d4a690773ef3f178415153b8b19